[package]
name = "embeded-td"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = { version = "6.4.1", features = ["interpolate-folder-path", "include-exclude", "include-flate"] }
tempfile = "3.3.0"
thiserror = "1.0.35"

time = { version = "0.3.14", features = ["serde"] }
log = "0.4.17"
rand_core = "0.6.4"
serde = { version = "1.0.144", features = ["derive"] }

base64 = "0.13.0"
hex = { version = "0.4.3", features = ["serde"] }

sha2 = "0.10.6"

toml = "0.5.9"
serde_json = "1.0.85"

# Secp256k1
k256 = "0.11.5"
ripemd = "0.1.2"

# ed25519 & sr25519
curve25519-dalek-ng = "4.1.1"

[features]
default = ["td_ver_0_34", "use_precompile_binary"]

# tendermint version of 0.34
td_ver_0_34 = []

# use precompile binary
use_precompile_binary = []
# build tendermint from source code, if no set, download binary from github
use_source_code = []

__debug_tmp = []

[build-dependencies]
flate2 = "1.0.24"
hex = "0.4.3"
reqwest = { version = "0.11.11", features = ["blocking"] }
sha2 = "0.10.6"
tar = "0.4.38"

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.85"
env_logger = "0.9.1"

