[package]
name = "embedded-td"
version = "0.1.4"
edition = "2021"
description = "Running tendermint as rust crate"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = { version = "6.4.1", features = ["interpolate-folder-path", "include-exclude", "include-flate"] }
thiserror = "1.0.35"

time = { version = "0.3.14", features = ["serde"] }
log = "0.4.17"
rand_core = "0.6.4"
serde = { version = "1.0.144", features = ["derive"] }

base64 = "0.13.0"
hex = { version = "0.4.3", features = ["serde"] }

sha2 = "0.10.6"

toml = "0.5.9"
serde_json = "1.0.85"

# Secp256k1
k256 = "0.11.5"
ripemd = "0.1.2"

# ed25519 & sr25519
curve25519-dalek-ng = "4.1.1"

subprocess = "0.2.9"
tempfile = "3.3.0"

[features]
default = ["td-ver-0-34"]

# Tendermint version
td-ver-0-34 = []
td-ver-0-37 = []
td-ver-0-33 = []

# How to get tendermint binary
use-source-code = []

# Storage backend
storage-goleveldb = []
storage-cleveldb = []
storage-badgerdb = []
storage-rocksdb = []
storage-boltdb = []

[build-dependencies]
flate2 = "1.0.24"
hex = "0.4.3"
sha2 = "0.10.6"
tar = "0.4.38"

[target.'cfg(target_os = "linux")'.build-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "rustls-tls", "socks"], default-features = false }

[target.'cfg(not(target_os = "linux"))'.build-dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "socks"], default-features = false }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.85"
env_logger = "0.9.1"
ctrlc = { version = "3.2.4", features = ["termination"] }

# abci interface
async-abci = { version = "0.1.5" }
tm-abci = { version = "0.1.2" }

smol = { version = "1.2.5" }
